Fix Safari iOS width collapse on itinerary tab

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,6 +14,7 @@
 /* Permitir scroll vertical fluido en el frame */
 :host {
   display: block;
+  width: 100%;
   height: 100vh;
   background-color: #f0f0f5; /* Color de fondo exterior en pantallas de escritorio */
 }
